@@ -41,7 +41,7 @@ Do not modify F<postinst>/F<postrm> scripts.
 
 =head1 NOTES
 
-Note that this command is not idempotent. "dh_clean -k" should be
+Note that this command is not idempotent. L<dh_prep(1)> should be
 called between invocations of this command. Otherwise, it may cause
 multiple instances of the same text to be added to maintainer scripts.
 
