@@ -53,3 +53,4 @@ Deprecated:
 * dh_undocumented
 * dh_installinit --init-script
 * dh_python
+* dh_clean -k (make it warn)
