@@ -30,6 +30,8 @@ debhelper (7.0.0) UNRELEASED; urgency=low
     all the new toys.
   * dh_clean: Don't delete core dumps. (Too DWIM, and "core" is not
     necessarily a core dump.) Closes: #477391
+  * dh_prep: New program, does the same as dh_clean -k (which will be
+    deprecated later).
 
  -- Joey Hess <joeyh@debian.org>  Tue, 22 Apr 2008 17:54:20 -0400
 
